src/test/ui/suggestions/issue-66968-suggest-sorted-words.stderr
error[E0425]: cannot find value `a_variable_longer_name` in this scope
  --> $DIR/issue-66968-suggest-sorted-words.rs:3:20
   |
LL |     println!("{}", a_variable_longer_name);
   |                    ^^^^^^^^^^^^^^^^^^^^^^ help: did you mean `a_longer_variable_name`? (a similarly named local variable)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
